# tejas-raksha

./: .gitignore  BRANDING_UPDATE.md  COMPLETE_LAUNCHER_SUMMARY.txt  COMPLETE_PROJECT_OVERVIEW.txt  CONTRIBUTING.md  DASHBOARD_COMPLETE_SUMMARY.txt  DASHBOARD_PHASE0_SUMMARY.txt  DESIGN_IMPROVEMENTS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.txt  GETTING_STARTED.txt  GITHUB_SETUP_COMPLETE.txt  INSTALLATION.md  LAUNCHER_FILES_CREATED.txt  LAUNCHER_GUIDE.txt  LICENSE  PAGES_CRAWLED_FIX.txt  PHASE_0_COMPLETE_SUMMARY.txt  PRODUCTION_TEST_RESULTS.txt  QUICKSTART.md  QUICK_REFERENCE.txt  QUICK_START_GUIDE.txt  SCAN_STATUS_SUMMARY.txt  SETUP_GITHUB.txt  START_SCAN.bat  START_SCAN.ps1  STOP_SERVICES.bat  STOP_SERVICES.sh  TEJAS_RAKSHA_IMPLEMENTATION.md  TEST_COMPLETE.md  config.yaml  pyproject.toml  requirements.txt  setup_git.ps1  setup_git.sh  start_scan.py  🚀_EASY_START.txt  🚀_START_HERE_FIRST.txt
docs/: .gitkeep  ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  USER_MANUAL.md
examples/: .gitkeep  authenticated_scan.py  basic_scan.py
src/: __init__.py  __main__.py  scanner.py
src/checks/: __init__.py  base.py  directory_listing.py  error_disclosure.py  https_config.py  open_redirect.py  registry.py  security_headers.py  sensitive_files.py  server_headers.py  sql_injection.py  xss.py
src/cli/: __init__.py  commands.py
src/crawler/: __init__.py  controller.py  fetcher.py  frontier.py  parser.py
src/models/: __init__.py  config.py  finding.py  scan_result.py
src/reporter/: __init__.py  csv_reporter.py  generator.py  html_reporter.py  json_reporter.py
src/reporter/static/: .gitkeep  scripts.js  styles.css
src/reporter/templates/: .gitkeep  report.html.j2
src/utils/: http_utils.py  logger.py  rate_limiter.py  robots_parser.py  validators.py
tests/: __init__.py
